Bug 69727 - weston-launch: failed to get current keyboard mode: Inappropriate ioctl for device
Summary: weston-launch: failed to get current keyboard mode: Inappropriate ioctl for d...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-23 18:48 UTC by U. Artie Eoff
Modified: 2013-10-08 14:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-09-23 18:48:51 UTC
weston-launch fails to run when executed from a Gnome-Terminal or via an ssh session.  It prints out the following error message:

weston-launch: failed to get current keyboard mode: Inappropriate ioctl for device
: Inappropriate ioctl for device

The only way weston-launch will run is if you execute it locally from a text console.

wayland (HEAD) 1.2.91-0-g4125367
drm (HEAD) libdrm-2.4.46-0-gc6d73cf
mesa (9.2) heads/9.2-0-g2cda3f0
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.0-0-g6898ab7
weston (HEAD) 1.2.91-0-g7799385
Comment 1 Kristian Høgsberg 2013-10-02 20:07:10 UTC
commit e05f228a5f60bdd41edfd92b12731a42110a5743
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 2 13:06:02 2013 -0700

    launcher: Print a more descriptive error message when we don't get a VT
    
    weston-launch has two supported use cases now: either launch from
    and VT login as a regular user (running within that session) or
    from an init script (systemd or such) with the -u option to create
    a session for the specified user.  Running from within X or ssh is
    not possible.  It's still possible to run weston as root from X or ssh
    but that's strictly a development/debug/test feature.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=69727


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.